--- a/index.html
+++ b/index.html
@@ -2,15 +2,6 @@
 <html lang="en">
 
 <head>
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-69RX31DGZW"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-69RX31DGZW');
-  </script>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Prof. BE. ELBAGHAZAOUI</title>
@@ -42,7 +33,7 @@
     (function () {
       // https://dashboard.emailjs.com/admin/account
       emailjs.init({
-        publicKey: "OTaL0MA-ZZC6yCXZi",
+        publicKey: "",
       });
     })();
   </script>
@@ -65,7 +56,7 @@
       document.getElementById('contact-form').addEventListener('submit', function (event) {
         event.preventDefault();
         // these IDs from the previous steps
-        emailjs.sendForm('service_3g9q9z4', 'template_gzcmrgq', '#contact-form').then(
+        emailjs.sendForm('', '', '#contact-form').then(
           (response) => {
             console.log('SUCCESS!');
             displayMessage('success'); // Show success message
@@ -78,30 +69,9 @@
       });
     }
   </script>
-  <!-- Google Tag Manager -->
-  <script>(function (w, d, s, l, i) {
-        w[l] = w[l] || []; w[l].push({
-          'gtm.start':
-            new Date().getTime(), event: 'gtm.js'
-        }); var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-            'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-      })(window, document, 'script', 'dataLayer', 'GTM-T7BVKB93');</script>
-  <!-- End Google Tag Manager -->
-  <!-- =======================================================
-  * Template Name: MyResume
-  * Template URL: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/
-  * Updated: Jun 29 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body class="index-page">
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T7BVKB93" height="0" width="0"
-      style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
 
   <header id="header" class="header d-flex flex-column justify-content-center">
 
