--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <div class="col-lg-9">
             <h2>YOUNESS MANCHIH</h2>
             <p>I'm <span class="typed"
-                data-typed-items="Math tutor, Python developer, Trainer, Fullstack Developer, Freelancer">Research
+                data-typed-items="Math tutor, Python Tutor, Trainer, Freelancer">Research
                 professor</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
               <a href="#"><i class="bi bi-twitter-x"></i></a>
@@ -370,7 +370,7 @@
               <i class="bi bi-telephone flex-shrink-0"></i>
               <div>
                 <h3>Call Me</h3>
-                <p>+212 6 68 70 22 02</p>
+                <p>+44 7480 569 703</p>
               </div>
             </div><!-- End Info Item -->
 
@@ -436,7 +436,7 @@
       </div>
       <div class="container">
         <div class="copyright">
-          <span>Copyright</span> <strong class="px-1 sitename">BE ELBAGHAZAOUI</strong> <span>All Rights Reserved</span>
+          <span>Copyright</span> <strong class="px-1 sitename">Y. MANCHIH</strong> <span>All Rights Reserved</span>
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
